--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,6 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@coreui/react": "^5.0.0",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -13,6 +12,7 @@
         "react-calendar": "^4.8.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
+        "socket.io-client": "^4.7.5",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
